[package]
name = "algotrading"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
futures-util = "0.3.30"
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.12"
uuid = "1.10.0"
