[package]
name = "exercise_node_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
futures-util = "0.3.30"
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.12"
uuid = "1.10.0"

anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
anchor-client = "0.30.1"
solana-sdk = "1"
anyhow = "1.0"
